Codealike status is not visible issue fixed (fixed #2)

--- a/styles/codealike-atom.less
+++ b/styles/codealike-atom.less
@@ -4,6 +4,9 @@
 // for a full listing of what's available.
 @import "ui-variables";
 
+.codealike-status {
+    display:inline-block;
+}
 
 .smalltalk {
     display: flex;
